Fixed Margins Around Application
Wanted to remove the extra margins around the top and side of the application, which was resolved by changing the CSS attributes. Now the top App Bar style element spans the entire screen.

--- a/Application/src/index.css
+++ b/Application/src/index.css
@@ -1,7 +1,10 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  position: relative;
+  /*top:-20px;*/
+  margin: 0px;
+  vertical-align: top;
+  /*margin: auto;*/
+  /*max-width: 38rem;*/
+  /*padding: 2rem;*/
 }
